# NonogramsSolver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Image/: CMakeLists.txt
Image/include/Image/: Image.hpp
Image/src/: CMakeLists.txt  Image.cpp
Image/tests/: CMakeLists.txt  Image_constructors_test.cpp  Image_test.cpp
Include/NonogramSolver/: ILineGenerator.hpp  NonogramSolver.hpp
Line/: CMakeLists.txt
Line/include/Line/: Line.hpp
Line/src/: CMakeLists.txt  Line.cpp
Line/tests/: CMakeLists.txt  Line_test.cpp
LineFilter/include/LineFilter/: ILineFilter.hpp  ILineFilterModifier.hpp  LineEmptyFilter.hpp  LineFillFilter.hpp  LineFilterBuilder.hpp  LineFilterInverter.hpp  LineMatchFilter.hpp  SequenceLineFilter.hpp  SequencerLineFilter.hpp
LineFilter/src/: CMakeLists.txt  ILineFilterModifier.cpp  LineEmptyFilter.cpp  LineFillFilter.cpp  LineFilterBuilder.cpp  LineFilterInverter.cpp  LineMatchFilter.cpp  SequenceLineFilter.cpp  SequencerLineFilter.cpp
LineFilter/tests/: CMakeLists.txt  LineFilter_test.cpp  SequencerLineFilter_test.cpp
LineGenerator/: CMakeLists.txt
LineGenerator/LineFilter/: CMakeLists.txt
LineGenerator/include/LineGenerator/: AllPossibleLinesGenerator.hpp  ILineGenerator.hpp  ILineGeneratorModifier.hpp  LineGeneratorAllPossibleLines.hpp  LineGeneratorBruteForce.hpp  LineGeneratorBuilder.hpp  LineGeneratorFilter.hpp
LineGenerator/src/: AllPossibleLinesGenerator.cpp  CMakeLists.txt  ILineGenerator.cpp  ILineGeneratorModifier.cpp  LineGeneratorAllPossibleLines.cpp  LineGeneratorBruteForce.cpp  LineGeneratorBuilder.cpp  LineGeneratorFilter.cpp
LineGenerator/tests/: CMakeLists.txt  LineGenerator_test.cpp
LineSequencer/: CMakeLists.txt
LineSequencer/include/LineSequencer/: FSTLineSequencer.hpp  ILineSequencer.hpp
LineSequencer/src/: CMakeLists.txt  FSTLineSequencer.cpp
LineSequencer/tests/: CMakeLists.txt  FSTLineSequencer_test.cpp
NonogramLevel/: CMakeLists.txt
NonogramLevel/include/NonogramLevel/: NonogramLevel.hpp
NonogramLevel/src/: CMakeLists.txt  NonogramLevel.cpp
NonogramLevel/tests/: CMakeLists.txt  NonogramLevel_test.cpp
Sequence/: CMakeLists.txt
Sequence/include/Sequence/: Sequence.hpp
Sequence/src/: CMakeLists.txt
Sequence/tests/: CMakeLists.txt  Sequence_test.cpp
Solver/: CMakeLists.txt
Solver/include/Solver/: DeductionSolver.hpp  ISolver.hpp
Solver/src/: CMakeLists.txt  DeductionSolver.cpp
Solver/tests/: CMakeLists.txt
Square/: CMakeLists.txt
Square/include/Square/: DefinedSquare.hpp  Square.hpp
Square/src/: CMakeLists.txt  Square.cpp
Square/tests/: CMakeLists.txt  Square_test.cpp
grid/: CMakeLists.txt
grid/include/grid/: grid.hpp
grid/src/: CMakeLists.txt  grid.ipp  grid.tpp
grid/tests/: CMakeLists.txt  grid_assignent_operators_test.cpp  grid_constructors_test.cpp  grid_element_accessors_test.cpp  grid_misc_test.cpp  grid_resize_test.cpp  grid_subgrid_test.cpp
src/: CMakeLists.txt  LineGeneratorBruteForce.cpp  NonogramSolver.cpp  main.cpp
